--- a/RoukoNET (NOTEBOOK)/HTML/index.html
+++ b/RoukoNET (NOTEBOOK)/HTML/index.html
@@ -12,7 +12,7 @@
     <header>
         <h1>Hola <a href="#">Miguel</a>, ¿cómo andas tanto tiempo?</h1>
     </header>
-    <script src="../JS/main.js"></script>
+    <!-- <script src="../JS/main.js"></script> -->
     <script src="../JS/ejercicios_Libro.js"></script>
 </body>
 </html>
