Cambios de nuevo

--- a/RoukoNET (NOTEBOOK)/HTML/index.html
+++ b/RoukoNET (NOTEBOOK)/HTML/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preload" href="../CSS/styles.css" as="style">
+    <link rel="preload" href="../CSS/normalize.css" as="style">
     <link rel="stylesheet" href="../CSS/normalize.css">
     <link rel="stylesheet" href="../CSS/styles.css">
     <title>Desde la ROUKONET</title>
@@ -15,5 +17,6 @@
     </header>
     <!-- <script src="../JS/main.js"></script> -->
     <script src="../JS/ejercicios_Libro.js"></script>
+    <script src="../JS/ciclos.js"></script>
 </body>
 </html>
